--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "pospro-high-performance-mobile",
     "slug": "pospro-high-performance-mobile",
+    "scheme": "pospro-high-performance-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -21,7 +22,14 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
-    }
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
+    },
+    "plugin": [
+      ["expo-font"],
+      {
+        "fonts": ["./public/fonts/NotoSansThai-Regular.ttf"]
+      }
+    ]
   }
 }
