--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pospro-high-performance-mobile",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-constants": "^16.0.2",
+    "expo-font": "^12.0.10",
+    "expo-linking": "^6.3.1",
+    "expo-router": "^3.5.23",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-dom": "^18.3.1",
+    "react-native": "0.74.5",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^3.35.0",
+    "react-native-web": "^0.19.13",
+    "react-native-webview": "^13.12.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
